--- a/archives/toutiao-search/2023-10-16.md
+++ b/archives/toutiao-search/2023-10-16.md
@@ -1,55 +1,71 @@
 # 2023-10-16
 
-共 174 条
+共 188 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Oct 16 2023 13:00:54 GMT+0800 (China Standard Time) -->
-1. [轿车高速上被恶意逼停4次](https://so.toutiao.com/search?keyword=轿车高速上被恶意逼停4次)
+<!-- 最后更新时间 Mon Oct 16 2023 14:00:42 GMT+0800 (China Standard Time) -->
 1. [刘能饰演者赵明远已在老家安葬](https://so.toutiao.com/search?keyword=刘能饰演者赵明远已在老家安葬)
+1. [你学的拼音o是读窝还是喔](https://so.toutiao.com/search?keyword=你学的拼音o是读窝还是喔)
 1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [王毅会见俄罗斯外长](https://so.toutiao.com/search?keyword=王毅会见俄罗斯外长)
-1. [黎巴嫩真主党在边境亮红旗画面曝光](https://so.toutiao.com/search?keyword=黎巴嫩真主党在边境亮红旗画面曝光)
-1. [拜登：以色列再次占领加沙将是错误](https://so.toutiao.com/search?keyword=拜登：以色列再次占领加沙将是错误)
-1. [李颖川出任新一届中国足协党委书记](https://so.toutiao.com/search?keyword=李颖川出任新一届中国足协党委书记)
 1. [医生：这几类人需警惕脑出血](https://so.toutiao.com/search?keyword=医生：这几类人需警惕脑出血)
 1. [妈妈送娃上学把娃落家里了](https://so.toutiao.com/search?keyword=妈妈送娃上学把娃落家里了)
-1. [中国银行原董事长刘连舸被决定逮捕](https://so.toutiao.com/search?keyword=中国银行原董事长刘连舸被决定逮捕)
+1. [拜登：以色列再次占领加沙将是错误](https://so.toutiao.com/search?keyword=拜登：以色列再次占领加沙将是错误)
+1. [宋凯当选中国足协主席](https://so.toutiao.com/search?keyword=宋凯当选中国足协主席)
+1. [女子抱怨5000万豪宅总闻到邻居烧菜](https://so.toutiao.com/search?keyword=女子抱怨5000万豪宅总闻到邻居烧菜)
+1. [四姐弟离散41年后终团圆](https://so.toutiao.com/search?keyword=四姐弟离散41年后终团圆)
+1. [黄智贤游浙江石塘：村子把人留下](https://so.toutiao.com/search?keyword=黄智贤游浙江石塘：村子把人留下)
 1. [以称军事行动目的是“铲除”哈马斯](https://so.toutiao.com/search?keyword=以称军事行动目的是“铲除”哈马斯)
 1. [河南老君山：网传免门票活动不实](https://so.toutiao.com/search?keyword=河南老君山：网传免门票活动不实)
-1. [巴以局势引发高度关切多国呼吁停火](https://so.toutiao.com/search?keyword=巴以局势引发高度关切多国呼吁停火)
-1. [声援巴勒斯坦浪潮蔓延全球](https://so.toutiao.com/search?keyword=声援巴勒斯坦浪潮蔓延全球)
-1. [布林肯称巴勒斯坦人不应被赶出加沙](https://so.toutiao.com/search?keyword=布林肯称巴勒斯坦人不应被赶出加沙)
 1. [以军称超60万人向加沙地带南部撤离](https://so.toutiao.com/search?keyword=以军称超60万人向加沙地带南部撤离)
-1. [马拉松选手冲刺被车挡住 组委会道歉](https://so.toutiao.com/search?keyword=马拉松选手冲刺被车挡住+组委会道歉)
-1. [你学的拼音o是读窝还是喔](https://so.toutiao.com/search?keyword=你学的拼音o是读窝还是喔)
 1. [阿巴斯：巴解是巴人民唯一合法代表](https://so.toutiao.com/search?keyword=阿巴斯：巴解是巴人民唯一合法代表)
-1. [宋凯当选中国足协主席](https://so.toutiao.com/search?keyword=宋凯当选中国足协主席)
-1. [伊朗发视频展示以色列轰炸后的加沙](https://so.toutiao.com/search?keyword=伊朗发视频展示以色列轰炸后的加沙)
-1. [救援队回应男子自捆双脚投河自尽](https://so.toutiao.com/search?keyword=救援队回应男子自捆双脚投河自尽)
-1. [4名小学生发现41年前曾灭绝的甲虫](https://so.toutiao.com/search?keyword=4名小学生发现41年前曾灭绝的甲虫)
-1. [向佐直播情绪失控怒怼网友](https://so.toutiao.com/search?keyword=向佐直播情绪失控怒怼网友)
-1. [伊朗：若不攻击我们则不会与以交战](https://so.toutiao.com/search?keyword=伊朗：若不攻击我们则不会与以交战)
-1. [青岛海上马拉松道歉](https://so.toutiao.com/search?keyword=青岛海上马拉松道歉)
 1. [黎以发生“致命跨境交火”](https://so.toutiao.com/search?keyword=黎以发生“致命跨境交火”)
-1. [网友偶遇郭晶晶的婆婆朱玲玲](https://so.toutiao.com/search?keyword=网友偶遇郭晶晶的婆婆朱玲玲)
-1. [66岁大爷赤脚跑马拉松](https://so.toutiao.com/search?keyword=66岁大爷赤脚跑马拉松)
-1. [这两张军机照片让人看到中美的不同](https://so.toutiao.com/search?keyword=这两张军机照片让人看到中美的不同)
-1. [周杰伦演唱会点歌环节夫妻大秀恩爱](https://so.toutiao.com/search?keyword=周杰伦演唱会点歌环节夫妻大秀恩爱)
-1. [小区没有物业是好事还是坏事](https://so.toutiao.com/search?keyword=小区没有物业是好事还是坏事)
-1. [动画还原黑龙江K5133次列车脱轨](https://so.toutiao.com/search?keyword=动画还原黑龙江K5133次列车脱轨)
-1. [中央气象台：明起较强冷空气来袭](https://so.toutiao.com/search?keyword=中央气象台：明起较强冷空气来袭)
-1. [岳云鹏被孟子义支配的恐惧](https://so.toutiao.com/search?keyword=岳云鹏被孟子义支配的恐惧)
-1. [美国男子刺死6岁巴勒斯坦裔男孩](https://so.toutiao.com/search?keyword=美国男子刺死6岁巴勒斯坦裔男孩)
-1. [小伙坐火车入俄因签证不符将被遣返](https://so.toutiao.com/search?keyword=小伙坐火车入俄因签证不符将被遣返)
-1. [至少有30名美公民在巴以冲突中身亡](https://so.toutiao.com/search?keyword=至少有30名美公民在巴以冲突中身亡)
+1. [声援巴勒斯坦浪潮蔓延全球](https://so.toutiao.com/search?keyword=声援巴勒斯坦浪潮蔓延全球)
+1. [马拉松选手冲刺被车挡住 组委会道歉](https://so.toutiao.com/search?keyword=马拉松选手冲刺被车挡住+组委会道歉)
 1. [加沙一医生看到儿子遗体时捂脸沉默](https://so.toutiao.com/search?keyword=加沙一医生看到儿子遗体时捂脸沉默)
-1. [教育厅回应家长质疑单韵母o发音](https://so.toutiao.com/search?keyword=教育厅回应家长质疑单韵母o发音)
+1. [黎巴嫩真主党在边境亮红旗画面曝光](https://so.toutiao.com/search?keyword=黎巴嫩真主党在边境亮红旗画面曝光)
+1. [中央气象台：明起较强冷空气来袭](https://so.toutiao.com/search?keyword=中央气象台：明起较强冷空气来袭)
+1. [救援队回应男子自捆双脚投河自尽](https://so.toutiao.com/search?keyword=救援队回应男子自捆双脚投河自尽)
 1. [恒大集团被执行3.5亿](https://so.toutiao.com/search?keyword=恒大集团被执行3.5亿)
+1. [网友偶遇郭晶晶的婆婆朱玲玲](https://so.toutiao.com/search?keyword=网友偶遇郭晶晶的婆婆朱玲玲)
+1. [王毅会见俄罗斯外长](https://so.toutiao.com/search?keyword=王毅会见俄罗斯外长)
+1. [美国男子刺死6岁巴勒斯坦裔男孩](https://so.toutiao.com/search?keyword=美国男子刺死6岁巴勒斯坦裔男孩)
+1. [中国银行原董事长刘连舸被决定逮捕](https://so.toutiao.com/search?keyword=中国银行原董事长刘连舸被决定逮捕)
+1. [这两张军机照片让人看到中美的不同](https://so.toutiao.com/search?keyword=这两张军机照片让人看到中美的不同)
+1. [轿车高速上被恶意逼停4次](https://so.toutiao.com/search?keyword=轿车高速上被恶意逼停4次)
+1. [以色列门将怒喷本泽马声援巴勒斯坦](https://so.toutiao.com/search?keyword=以色列门将怒喷本泽马声援巴勒斯坦)
+1. [南昌市委书记李红军有新职](https://so.toutiao.com/search?keyword=南昌市委书记李红军有新职)
+1. [埃及为何拒绝接收巴勒斯坦难民](https://so.toutiao.com/search?keyword=埃及为何拒绝接收巴勒斯坦难民)
+1. [小伙坐火车入俄因签证不符将被遣返](https://so.toutiao.com/search?keyword=小伙坐火车入俄因签证不符将被遣返)
+1. [4名小学生发现41年前曾灭绝的甲虫](https://so.toutiao.com/search?keyword=4名小学生发现41年前曾灭绝的甲虫)
+1. [尼日利亚副总统谢蒂马抵达北京](https://so.toutiao.com/search?keyword=尼日利亚副总统谢蒂马抵达北京)
+1. [动画还原黑龙江K5133次列车脱轨](https://so.toutiao.com/search?keyword=动画还原黑龙江K5133次列车脱轨)
+1. [教育厅回应家长质疑单韵母o发音](https://so.toutiao.com/search?keyword=教育厅回应家长质疑单韵母o发音)
+1. [小区没有物业是好事还是坏事](https://so.toutiao.com/search?keyword=小区没有物业是好事还是坏事)
+1. [我国第一颗原子弹爆炸成功59周年](https://so.toutiao.com/search?keyword=我国第一颗原子弹爆炸成功59周年)
+1. [男子报假警举报卖淫窝点被处罚](https://so.toutiao.com/search?keyword=男子报假警举报卖淫窝点被处罚)
+1. [伊朗：若不攻击我们则不会与以交战](https://so.toutiao.com/search?keyword=伊朗：若不攻击我们则不会与以交战)
+1. [中国原子弹之父钱三强诞辰110周年](https://so.toutiao.com/search?keyword=中国原子弹之父钱三强诞辰110周年)
+1. [新加坡买手表带回国被海关收税2万](https://so.toutiao.com/search?keyword=新加坡买手表带回国被海关收税2万)
+1. [我国将出现大范围雨雪和降温过程](https://so.toutiao.com/search?keyword=我国将出现大范围雨雪和降温过程)
+1. [韩国瑜称4年前侯友宜黑锅背得很大](https://so.toutiao.com/search?keyword=韩国瑜称4年前侯友宜黑锅背得很大)
+1. [字母哥：能和利拉德打球是一种幸运](https://so.toutiao.com/search?keyword=字母哥：能和利拉德打球是一种幸运)
+1. [周杰伦演唱会保安爬墙给粉丝发福利](https://so.toutiao.com/search?keyword=周杰伦演唱会保安爬墙给粉丝发福利)
+1. [岳云鹏被孟子义支配的恐惧](https://so.toutiao.com/search?keyword=岳云鹏被孟子义支配的恐惧)
+1. [侯办执行长呛柯文哲：说翻脸就翻脸](https://so.toutiao.com/search?keyword=侯办执行长呛柯文哲：说翻脸就翻脸)
+1. [女商人4600万购买酒店 9年未能过户](https://so.toutiao.com/search?keyword=女商人4600万购买酒店+9年未能过户)
+1. [白岩松谈“收割机被恶意损坏”](https://so.toutiao.com/search?keyword=白岩松谈“收割机被恶意损坏”)
+1. [李颖川出任新一届中国足协党委书记](https://so.toutiao.com/search?keyword=李颖川出任新一届中国足协党委书记)
+1. [巴以局势引发高度关切多国呼吁停火](https://so.toutiao.com/search?keyword=巴以局势引发高度关切多国呼吁停火)
+1. [布林肯称巴勒斯坦人不应被赶出加沙](https://so.toutiao.com/search?keyword=布林肯称巴勒斯坦人不应被赶出加沙)
+1. [伊朗发视频展示以色列轰炸后的加沙](https://so.toutiao.com/search?keyword=伊朗发视频展示以色列轰炸后的加沙)
+1. [向佐直播情绪失控怒怼网友](https://so.toutiao.com/search?keyword=向佐直播情绪失控怒怼网友)
+1. [青岛海上马拉松道歉](https://so.toutiao.com/search?keyword=青岛海上马拉松道歉)
+1. [66岁大爷赤脚跑马拉松](https://so.toutiao.com/search?keyword=66岁大爷赤脚跑马拉松)
+1. [周杰伦演唱会点歌环节夫妻大秀恩爱](https://so.toutiao.com/search?keyword=周杰伦演唱会点歌环节夫妻大秀恩爱)
+1. [至少有30名美公民在巴以冲突中身亡](https://so.toutiao.com/search?keyword=至少有30名美公民在巴以冲突中身亡)
 1. [五保户去世后村委会有权回收房屋吗](https://so.toutiao.com/search?keyword=五保户去世后村委会有权回收房屋吗)
 1. [夫妻背黄金上下班被小偷踩点盗走](https://so.toutiao.com/search?keyword=夫妻背黄金上下班被小偷踩点盗走)
 1. [王进喜已经出任国铁集团副总经理](https://so.toutiao.com/search?keyword=王进喜已经出任国铁集团副总经理)
-1. [埃及为何拒绝接收巴勒斯坦难民](https://so.toutiao.com/search?keyword=埃及为何拒绝接收巴勒斯坦难民)
-1. [周杰伦演唱会保安爬墙给粉丝发福利](https://so.toutiao.com/search?keyword=周杰伦演唱会保安爬墙给粉丝发福利)
 1. [美众议院群龙无首 以乌两国受影响](https://so.toutiao.com/search?keyword=美众议院群龙无首+以乌两国受影响)
 1. [柯文哲未提蓝白第二次会谈时间](https://so.toutiao.com/search?keyword=柯文哲未提蓝白第二次会谈时间)
 1. [杭州调整住房限购范围](https://so.toutiao.com/search?keyword=杭州调整住房限购范围)
@@ -58,7 +74,6 @@
 1. [以色列总理：我们将摧毁哈马斯](https://so.toutiao.com/search?keyword=以色列总理：我们将摧毁哈马斯)
 1. [古特雷斯：中东处于“深渊边缘”](https://so.toutiao.com/search?keyword=古特雷斯：中东处于“深渊边缘”)
 1. [乡政府回应玉米地遭哄抢：是捡拾](https://so.toutiao.com/search?keyword=乡政府回应玉米地遭哄抢：是捡拾)
-1. [以色列门将怒喷本泽马声援巴勒斯坦](https://so.toutiao.com/search?keyword=以色列门将怒喷本泽马声援巴勒斯坦)
 1. [王霜郑智等20人当选足协执委](https://so.toutiao.com/search?keyword=王霜郑智等20人当选足协执委)
 1. [巴方：以军空袭加沙又致至少300死](https://so.toutiao.com/search?keyword=巴方：以军空袭加沙又致至少300死)
 1. [中国足协历任掌门](https://so.toutiao.com/search?keyword=中国足协历任掌门)
@@ -100,7 +115,6 @@
 1. [云南德宏州庆祝成立70周年](https://so.toutiao.com/search?keyword=云南德宏州庆祝成立70周年)
 1. [曝美以讨论拜登访问以色列的可能性](https://so.toutiao.com/search?keyword=曝美以讨论拜登访问以色列的可能性)
 1. [曾卖房为灾区捐款450万的奶奶走了](https://so.toutiao.com/search?keyword=曾卖房为灾区捐款450万的奶奶走了)
-1. [我国将出现大范围雨雪和降温过程](https://so.toutiao.com/search?keyword=我国将出现大范围雨雪和降温过程)
 1. [四个美国航母战斗群部署在全球各地](https://so.toutiao.com/search?keyword=四个美国航母战斗群部署在全球各地)
 1. [为什么蓝绿白都不敢碰台潜艇腐败案](https://so.toutiao.com/search?keyword=为什么蓝绿白都不敢碰台潜艇腐败案)
 1. [女孩开饮料划伤手向店家索赔1000元](https://so.toutiao.com/search?keyword=女孩开饮料划伤手向店家索赔1000元)
